# termitune

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/audio/: metadata.rs  player.rs
src/input/: handler.rs
src/queue/: manager.rs
src/ui/: app.rs  browser.rs  mod.rs  player.rs  queue_panel.rs
