[package]
name = "termitune"
version = "0.1.0"
edition = "2026"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rodio = "0.19"
loft = "0.10"
dirs = "5"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
