[package]
name = "termitune"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast, lightweight, keyboard-driven terminal music player in Rust"
homepage = "https://github.com/ohmygodashish/termitune"
repository = "https://github.com/ohmygodashish/termitune"
keywords = ["terminal", "tui", "music", "audio", "player", "cli"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rodio = "0.19"
lofty = "0.21"
dirs = "5"
walkdir = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
